--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,8 +6,10 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div>
-      <i class="e-icon e-icon--add_circle-filled-color e-icon--sm"></i>
-      <i class="e-icon e-icon--arrow_left_circle-color e-icon--sm"></i>
+      <i class="e-icon e-icon--add_circle-filled-color e-icon--sm e-icon--color-disabled"></i>
+      <i class="e-icon e-icon--arrow_left_circle-color e-icon--sm e-icon--color-disabled"></i>
+      <i class="e-icon e-icon--add_circle-filled e-icon--sm e-icon--color-disabled"></i>
+      <i class="e-icon e-icon--add_circle-filled e-icon--sm"></i>
     </div>
     <div class="e-bg-white"></div>
     <!--Inverted version-->
