--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -56,8 +56,8 @@
           <div class="image-div home-image-animation">
             <img
               *ngIf="isBirthday && !christmas && !halloween"
-              src="assets/holidayIllustrations/Birthday.png"
-              alt="Designsystem birthday illustration"
+              src="{{ 'assets/holidayIllustrations/Birthday' + currentYear + '.png' }}"
+              alt="{{ 'Design system birthday illustration for ' + currentYear }}"
             />
             <img
               *ngIf="christmas && !halloween && !isBirthday"
@@ -83,8 +83,8 @@
           <div class="image-div home-image-animation">
             <img
               *ngIf="isBirthday && !christmas && !halloween"
-              src="assets/holidayIllustrations/Birthday.png"
-              alt="Designsystem birthday illustration"
+              src="{{ 'assets/holidayIllustrations/Birthday' + currentYear + '.png' }}"
+              alt="{{ 'Design system birthday illustration for ' + currentYear }}"
             />
             <img
               *ngIf="christmas && !halloween && !isBirthday"
