fix typo in component installation guide

--- a/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
@@ -28,9 +28,9 @@
     <strong>Import package:</strong>
     <h4 class="e-title-caps e-mt-24 e-mb-8">Web component</h4>
     <div class="code-text">
-      <app-copy message="Import '@elvia/{{ packageName }}';">
+      <app-copy message="import '@elvia/{{ packageName }}';">
         <ng-container ngProjectAs="copyContent">
-          <span class="code-text" style="line-height: 26px">Import '@elvia/{{ packageName }}';</span>
+          <span class="code-text" style="line-height: 26px">import '@elvia/{{ packageName }}';</span>
         </ng-container>
       </app-copy>
     </div>
