--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -251,13 +251,16 @@
   <!--Divider-->
   <div class="example-wrapper">
     <h3>Divider</h3>
+    <h4>Title divider</h4>
     <elvia-divider type="title" typography="caps">
-      <h3 slot="title">Title</h3>
+      <h2 slot="title">Title with caps</h2>
     </elvia-divider>
-    <h3>Vertical divider</h3>
+    <h4>Vertical divider</h4>
     <div style="height: 100px">
       <elvia-divider type="simple" orientation="vertical"></elvia-divider>
     </div>
+    <h4>Curved divider</h4>
+    <elvia-divider type="curved"></elvia-divider>
   </div>
 
   <!--Dropdown-->
