--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -45,7 +45,7 @@
   <div class="example-wrapper">
     <h3>Badge</h3>
     <div style="display: flex; gap: 1rem">
-      <elvia-badge [count]="0">
+      <elvia-badge [count]="10">
         <button
           class="e-thumbnail"
           aria-label="Thumbnail button that opens the image in a larger view"
@@ -63,7 +63,7 @@
           <img src="https://picsum.photos/56" alt="Thumbnail example image" />
         </button>
       </elvia-badge>
-      <elvia-badge [count]="101" [badgeColor]="'black'">
+      <elvia-badge [count]="101" [badgeColor]="'neutral'">
         <button
           class="e-thumbnail"
           aria-label="Thumbnail button that opens the image in a larger view"
