--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -78,10 +78,29 @@
   <!--Box-->
   <div class="example-wrapper">
     <h3>Box</h3>
-    <div style="padding: 8px">
+    <div style="padding: 8px; display: flex; flex-direction: column; gap: 1rem">
       <elvia-box [hasBorder]="true">
-        <h3 slot="title">Title</h3>
-        <div slot="content">Webcomponentent content for the box component</div>
+        <span slot="title">Title</span>
+        <div slot="content">Webcomponent content for the box component</div>
+      </elvia-box>
+
+      <div style="padding: 1rem; background-color: #f4f4f4">
+        <elvia-box>
+          <div slot="content">Webcomponent content for the box component</div>
+        </elvia-box>
+      </div>
+
+      <elvia-box [isColored]="false" [hasBorder]="false">
+        <div slot="content">Webcomponent content for the box component</div>
+      </elvia-box>
+
+      <elvia-box [isColored]="true" [hasBorder]="true">
+        <div slot="content">Webcomponent content for the box component</div>
+      </elvia-box>
+
+      <elvia-box [isColored]="true" [hasBorder]="true">
+        <span slot="title">My title here</span>
+        <div slot="content">Webcomponent content for the box component</div>
       </elvia-box>
     </div>
   </div>
