--- a/packages/elvis/src/main.scss
+++ b/packages/elvis/src/main.scss
@@ -1,3 +1,5 @@
+@use '@elvia/elvis-colors/dist/themeVariables' as ThemeVariables;
+
 @use 'components/main';
 @use 'variables/main' as main2;
 @use 'utilities/main' as main3;
