chore(web): update get started documentation for token packages

--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -181,12 +181,11 @@
             <div>
               Our components have each their own npm package that can be used individually or together with
               other components and elvis. Our components are also listed together with the styling library
-              under "Components" in the menu. We also offer colors, typography and icons as individual
-              packages if you don't want to use Elvis.
+              under "Components" in the menu.
             </div>
 
             <div class="e-mt-24">
-              Each components has their own guidelines for how to use and install the package in your project.
+              Each component has its own guidelines for how to use and install the package in your project.
             </div>
           </div>
         </div>
