--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -107,18 +107,18 @@ $form-input-padding-compact-active: 3px 9px;
     cursor: not-allowed;
     opacity: 1;
 
-    &[type='number'] {
-      ::-webkit-outer-spin-button,
-      ::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-      }
-
-      -moz-appearance: textfield;
-    }
-
     @include helpers.placeholder() {
       color: colors.color('grey-30');
+    }
+
+    &[type='number'] {
+      appearance: textfield;
+
+      ::-webkit-outer-spin-button,
+      ::-webkit-inner-spin-button {
+        margin: 0;
+        appearance: none;
+      }
     }
   }
 
@@ -133,13 +133,13 @@ $form-input-padding-compact-active: 3px 9px;
       color: colors.color('text-light');
 
       &[type='number'] {
+        appearance: textfield;
+
         ::-webkit-outer-spin-button,
         ::-webkit-inner-spin-button {
-          -webkit-appearance: none;
           margin: 0;
+          appearance: none;
         }
-
-        -moz-appearance: textfield;
       }
     }
   }
