--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -1,11 +1,14 @@
 <h1>Angular Preview</h1>
 <button class="e-btn theme-toggle-button" (click)="toggleTheme()">Toggle theme</button>
+<elvia-toast></elvia-toast>
 <div class="components-examples" id="dev-component-examples">
   <div class="example-wrapper">
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <button (click)="showToast()">Show toast</button>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
