docs(icons): remove caution icon color doc

--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
@@ -316,7 +316,7 @@
             for a more in-depth understanding of the Elvia colors and how to use them.
           </p>
           <p>
-            The available color classes for icons can be seen below. Note that the two static colors remain
+            The available color classes for icons can be seen below. Note that the static colors remain
             black/white in dark theme, and should only be used in specific places.
           </p>
           <app-component-example-v1 [codeHTML]="iconColorClassExample"></app-component-example-v1>
