Lego 2302 typografi oppdatering (#1340)
* feat(elvis-typography): add lineHeightMobile: '160%',

* chore(elvis): update CHANGELOG.json

* chore(elvis): update package.json

* fix(table): keep table 48px height

* fix(table): stylelint error

* fix

* fix

* fix 3

* chore(elvis): clean changelog

see PR-description

* Update packages/elvis/package.json

Co-authored-by: Trygve Scheline Urdahl <trygve.urdahl@hotmail.com>

* Update packages/elvis-typography/CHANGELOG.md

Co-authored-by: Trygve Scheline Urdahl <trygve.urdahl@hotmail.com>

* Update yarn.lock

---------

Co-authored-by: Trygve Scheline Urdahl <trygve.urdahl@hotmail.com>

--- a/packages/elvis/src/components/table.scss
+++ b/packages/elvis/src/components/table.scss
@@ -2,6 +2,7 @@
 @use '../variables/typography';
 @use '../utilities/icons';
 @use '../utilities/helpers';
+@use '../utilities/breakpoints.scss';
 
 $table-padding: 10px 16px;
 $table-compact-padding: 9px 16px;
@@ -93,9 +94,14 @@ $grey10: colors.color('grey-10');
   td,
   th {
     @include typography.typography('text-md');
+
     padding: $table-padding;
     background: colors.color('white');
     text-align: left;
+
+    @include breakpoints.breakpoint-up(Mobile) {
+      line-height: 28px;
+    }
 
     &.e-table__cell--multiline {
       width: 450px;
@@ -221,6 +227,10 @@ $grey10: colors.color('grey-10');
     color: colors.color('font-color');
     line-height: 27px;
     text-align: left;
+
+    @include breakpoints.breakpoint-up(Mobile) {
+      line-height: 27px;
+    }
   }
 
   th[class*='e-table-mobile__cell'] {
