refactor(toast): simplify css

--- a/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
@@ -58,7 +58,7 @@
             </li>
           </ol>
 
-          The options are as follows:
+          The toast configuration has the following options:
           <ul class="e-list">
             <li>
               <code>title: string</code>
@@ -76,11 +76,11 @@
             </li>
             <li>
               <code>closable: boolean</code>
-              : Whether the toast is closable.
+              : Whether the toast has a close button.
             </li>
             <li>
               <code>status: "positive" | "informative"</code>
-              : The toast status. Changes its appearance. Defaults to
+              : The toast status, which changes its appearance. Defaults to
               <code>"positive"</code>
               .
             </li>
