--- a/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
@@ -28,6 +28,45 @@
     </ng-container>
   </app-component-section>
 
+  <!--STATUS-->
+  <app-component-section [sectionTitle]="'Status'">
+    <ng-container ngProjectAs="sectionContent">
+      The status of an alert helps to communicate the information and the severity of the toast. Each status
+      consists of a defined color and an icon. It is important to use the correct status of the toast to
+      provide a consistent and universal user experience.
+      <div class="alert-status e-mt-80">
+        <div class="alert-icons">
+          <div class="e-bg-green e-mr-24" style="padding: 24px; height: 24px; border-radius: 50%"></div>
+          <div>
+            <i class="e-icon e-icon--check_circle e-icon--color-green e-icon--xl" aria-hidden="true"></i>
+          </div>
+        </div>
+        <div>
+          <div class="title e-title-caps">positive</div>
+          <div class="e-mt-8">
+            Provide a positive response to user actions, like a confirmation that an action is fully
+            completed. Example: save, edit and submit.
+          </div>
+        </div>
+      </div>
+      <div class="alert-status">
+        <div class="alert-icons">
+          <div class="e-bg-grey e-mr-24" style="padding: 24px; height: 24px; border-radius: 50%"></div>
+          <div>
+            <i class="e-icon e-icon--information_circle e-icon--color-grey e-icon--xl" aria-hidden="true"></i>
+          </div>
+        </div>
+        <div>
+          <div class="title e-title-caps">informative</div>
+          <div class="e-mt-8">
+            Inform users to understand minor contextual changes, and are not typically in response to a user
+            action. Like a helpful tip or a suggestion.
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </app-component-section>
+
   <!--ACCESSIBILITY-->
   <app-component-section sectionTitle="Accessibility">
     <ng-container ngProjectAs="sectionContent">
