--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.html
@@ -47,6 +47,7 @@
           [codeInverted]="codeInverted"
           [isInverted]="isInverted"
           [noSubscriptions]="'true'"
+          [noCodePenLink]="noCodePenLink"
         ></app-component-example-code>
       </div>
     </elvia-accordion>
