--- a/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
@@ -9,17 +9,7 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
-  <div class="e-my-48" class="component-preview-temp">
-    <elvia-toast></elvia-toast>
-    <button class="e-btn" (click)="showToast()">Show example toast</button>
-  </div>
-  <div class="e-w-100">
-    <app-component-example-v1
-      [showPreview]="false"
-      [codeHTML]="exampleInHTML"
-      [codeTS]="exampleInTS"
-    ></app-component-example-v1>
-  </div>
+  <app-toast-ceg></app-toast-ceg>
 
   <!--USAGE-->
   <app-component-section [sectionTitle]="'Usage'">
