--- a/packages/web/src/app/doc-pages/components/toast-doc/toast-ceg/toast-ceg.component.html
+++ b/packages/web/src/app/doc-pages/components/toast-doc/toast-ceg/toast-ceg.component.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="ceg-controls">
-    <fieldset>
+    <fieldset class="e-strip-fieldset">
       <legend class="e-text-sm-strong e-mb-8">Status</legend>
       <form class="e-form_field">
         <label class="e-radio e-radio--compact">
