docs(toast): improve react documentation

--- a/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/toast-doc/toast-doc.component.html
@@ -72,7 +72,9 @@
         <li>
           Add the
           <code>&lt;elvia-toast&gt;&lt;/elvia-toast&gt;</code>
-          component to the root of your app, for example
+          (Angular/Vue) or
+          <code>&lt;Toast&gt;</code>
+          (React) component to the root of your app, for example
           <code>App.vue</code>
           (Vue),
           <code>App.component.ts</code>
@@ -87,8 +89,10 @@
           <code>openElviaToast</code>
           from
           <code>@elvia/elvis-toast</code>
-          where you want to dispatch a toast, and call it with the appropriate toast configuration. The
-          different options for the toast configuration is displayed below.
+          (Angular/Vue) or
+          <code>@elvia/elvis-toast/react</code>
+          (React) where you want to dispatch a toast, and call it with the appropriate toast configuration.
+          The different options for the toast configuration is displayed below.
         </li>
       </ol>
     </ng-container>
